MINOR: Various cleanups in coordinator modules